btn alignment fix

--- a/client/src/styles/ButtonList.module.css
+++ b/client/src/styles/ButtonList.module.css
@@ -8,7 +8,6 @@
     top: 15px;
 
     min-width:440px;
-    border:1px solid white;
 }
 .btn{
     background: transparent;
